# ETLMuitasLinhas

./: .gitignore  README.md  etl_duckdb.py  etl_python.py  pyproject.toml
data/: measurements_sumary.parquet
