[tool.poetry]
name = "etlmuitaslinhas"
version = "0.1.0"
description = ""
authors = ["Matheus Galvao <matheusgalvaoangelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
duckdb = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
